--- a/pedido.html
+++ b/pedido.html
@@ -3,17 +3,19 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Novo Pedido — MoskoGás v2.10.4</title>
+<title>Novo Pedido — MoskoGás v2.11.0</title>
 <style>
   * { box-sizing: border-box; margin: 0; padding: 0; }
   body { font-family: system-ui, sans-serif; background: #f1f5f9; min-height: 100vh; }
-  .container { max-width: 680px; margin: 0 auto; padding: 20px; }
-  h1 { color: #1e293b; font-size: 22px; margin-bottom: 16px; }
-  .card { background: #fff; border-radius: 12px; padding: 20px; margin-bottom: 16px; box-shadow: 0 1px 4px rgba(0,0,0,0.1); }
-  label { display: block; font-size: 12px; font-weight: 700; color: #64748b; margin-bottom: 4px; text-transform: uppercase; }
-  input, textarea, select { width: 100%; padding: 10px 12px; border: 2px solid #e2e8f0; border-radius: 8px; font-size: 16px; transition: border 0.2s; }
+  .container { max-width: 1140px; margin: 0 auto; padding: 12px 16px; }
+  .two-col { display: grid; grid-template-columns: 1fr 1fr; gap: 14px; align-items: start; }
+  @media (max-width: 900px) { .two-col { grid-template-columns: 1fr; } }
+  h1 { color: #1e293b; font-size: 20px; margin-bottom: 10px; }
+  .card { background: #fff; border-radius: 12px; padding: 16px; margin-bottom: 12px; box-shadow: 0 1px 4px rgba(0,0,0,0.1); }
+  label { display: block; font-size: 11px; font-weight: 700; color: #64748b; margin-bottom: 3px; text-transform: uppercase; }
+  input, textarea, select { width: 100%; padding: 8px 10px; border: 2px solid #e2e8f0; border-radius: 8px; font-size: 15px; transition: border 0.2s; }
   input:focus, textarea:focus { outline: none; border-color: #f97316; }
-  .row { display: grid; gap: 12px; margin-bottom: 12px; }
+  .row { display: grid; gap: 10px; margin-bottom: 10px; }
   .row-2 { grid-template-columns: 1fr 1fr; }
   .autocomplete-box { position: relative; }
   #suggestions { position: absolute; top: 100%; left: 0; right: 0; background: #fff; border: 2px solid #f97316; border-top: none; border-radius: 0 0 8px 8px; z-index: 100; max-height: 250px; overflow-y: auto; }
@@ -22,7 +24,7 @@
   .suggestion-item strong { color: #1e293b; }
   .suggestion-item small { color: #64748b; }
   .items-grid { display: grid; grid-template-columns: repeat(3, 1fr); gap: 8px; margin-bottom: 12px; }
-  .item-btn { padding: 12px 6px; border: 2px solid #e2e8f0; border-radius: 8px; background: #fff; cursor: pointer; font-size: 13px; font-weight: 700; text-align: center; transition: all 0.15s; }
+  .item-btn { padding: 10px 6px; border: 2px solid #e2e8f0; border-radius: 8px; background: #fff; cursor: pointer; font-size: 12px; font-weight: 700; text-align: center; transition: all 0.15s; }
   .item-btn:hover { border-color: #f97316; background: #fff7ed; }
   .item-btn.selected { border-color: #f97316; background: #f97316; color: #fff; }
   .item-row { display: flex; align-items: center; gap: 8px; margin-bottom: 8px; background: #f8fafc; border-radius: 8px; padding: 8px 12px; }
@@ -30,7 +32,7 @@
   .qty-btn { width: 32px; height: 32px; border: 2px solid #e2e8f0; border-radius: 6px; background: #fff; font-size: 18px; cursor: pointer; font-weight: 700; }
   .qty-val { width: 36px; text-align: center; font-weight: 700; font-size: 16px; }
   .btn-remove { background: none; border: none; color: #dc2626; cursor: pointer; font-size: 18px; }
-  .btn-primary { background: #f97316; color: #fff; border: none; border-radius: 10px; padding: 16px 24px; font-size: 18px; font-weight: 800; width: 100%; cursor: pointer; transition: background 0.2s; }
+  .btn-primary { background: #f97316; color: #fff; border: none; border-radius: 10px; padding: 14px 24px; font-size: 17px; font-weight: 800; width: 100%; cursor: pointer; transition: background 0.2s; }
   .btn-primary:hover { background: #ea6d0a; }
   .btn-primary:disabled { background: #94a3b8; cursor: not-allowed; }
   .status-bar { text-align: center; padding: 8px; font-size: 13px; color: #64748b; }
@@ -38,7 +40,7 @@
   .total-bar .val { font-size: 22px; font-weight: 900; color: #f97316; }
   .search-tab { padding: 8px; border: 2px solid #e2e8f0; border-radius: 8px; background: #fff; cursor: pointer; font-size: 13px; font-weight: 700; color: #64748b; transition: all 0.15s; }
   .search-tab.active { border-color: #f97316; background: #f97316; color: #fff; }
-  textarea { resize: vertical; height: 70px; }
+  textarea { resize: vertical; height: 50px; }
   .fav-btn { padding: 7px 14px; border: 2px solid #e2e8f0; border-radius: 8px; background: #fff; cursor: pointer; font-size: 12px; font-weight: 700; color: #334155; transition: all 0.15s; white-space: nowrap; display: flex; align-items: center; gap: 5px; }
   .fav-btn:hover { border-color: #f97316; background: #fff7ed; color: #f97316; transform: translateY(-1px); }
   .fav-btn:active { transform: scale(0.97); }
@@ -47,15 +49,19 @@
 </head>
 <body>
 <div id="nav-placeholder"></div>
-<div style="font-size:10px;color:#94a3b8;text-align:right;padding:2px 12px 0">v2.10.4 — pedido</div>
+<div style="font-size:10px;color:#94a3b8;text-align:right;padding:2px 12px 0">v2.11.0 — pedido</div>
 <div class="container">
-  <h1>➕ Novo Pedido <span id="bling-indicator" title="Verificando Bling..." style="font-size:11px;padding:2px 8px;border-radius:10px;background:#94a3b8;color:#fff;cursor:pointer;vertical-align:middle" onclick="checkBlingStatus(true)">⏳ Bling</span> <span style="font-size:12px;color:#94a3b8;font-weight:400">v2.10.4</span></h1>
+  <h1>➕ Novo Pedido <span id="bling-indicator" title="Verificando Bling..." style="font-size:11px;padding:2px 8px;border-radius:10px;background:#94a3b8;color:#fff;cursor:pointer;vertical-align:middle" onclick="checkBlingStatus(true)">⏳ Bling</span> <span style="font-size:12px;color:#94a3b8;font-weight:400">v2.11.0</span></h1>
+
+  <div class="two-col">
+  <!-- ═══ COLUNA ESQUERDA: CLIENTE ═══ -->
+  <div class="col-left">
 
   <!-- BUSCA CLIENTE -->
   <div class="card">
-    <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:6px">
+    <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:6px;flex-wrap:wrap;gap:4px">
       <label style="margin:0">🔍 Buscar Cliente</label>
-      <div style="display:flex;gap:6px">
+      <div style="display:flex;gap:4px;flex-wrap:wrap">
         <button onclick="setConsumidorFinal()" style="background:#f0f9ff;border:1px solid #7dd3fc;border-radius:6px;padding:3px 10px;font-size:11px;color:#0284c7;cursor:pointer;font-weight:600" title="Pedido sem cadastro — Consumidor Final Bling">👤 Consumidor Final</button>
         <button onclick="openCadastroModal()" style="background:#f0fdf4;border:1px solid #86efac;border-radius:6px;padding:3px 10px;font-size:11px;color:#16a34a;cursor:pointer;font-weight:600" title="Cadastrar novo cliente no Bling (PF/PJ)">➕ Cadastrar Cliente</button>
         <button onclick="syncBling(this)" style="background:none;border:1px solid #e2e8f0;border-radius:6px;padding:3px 10px;font-size:11px;color:#94a3b8;cursor:pointer" title="Sincronizar contatos do Bling para busca por endereço">🔄 Sync Bling</button>
@@ -143,6 +149,11 @@
     </div>
   </div>
 
+  </div><!-- /col-left -->
+
+  <!-- ═══ COLUNA DIREITA: PEDIDO ═══ -->
+  <div class="col-right">
+
   <!-- ITENS -->
   <div class="card">
     <label style="margin-bottom:10px">📦 Itens do Pedido</label>
@@ -161,21 +172,17 @@
     </div>
   </div>
 
-  <!-- OBSERVAÇÃO -->
-  <div class="card">
-    <label>📝 Observação (opcional)</label>
-    <textarea id="notes" placeholder="Urgente, horário preferido, troco para..."></textarea>
-  </div>
-
-  <!-- TIPO DE PAGAMENTO -->
+  <!-- OBSERVAÇÃO + PAGAMENTO -->
   <div class="card" style="border:3px solid #6366f1">
-    <label style="font-size:14px;font-weight:800;color:#4f46e5;letter-spacing:.5px">💳 TIPO DE PAGAMENTO <span style="color:#dc2626">*</span></label>
-    <div style="font-size:12px;color:#64748b;margin:6px 0 12px;line-height:1.4">
-      <strong>Pagos agora:</strong> cria venda no Bling imediatamente<br>
-      <strong>PIX a receber:</strong> cria venda no Bling, aguarda confirmação<br>
-      <strong>Mensalista/Boleto:</strong> NÃO cria venda agora, aparece em Pagamentos
+    <div style="margin-bottom:10px">
+      <label>📝 Observação (opcional)</label>
+      <textarea id="notes" placeholder="Urgente, horário preferido, troco para..."></textarea>
     </div>
-    <div style="display:grid;grid-template-columns:1fr 1fr;gap:8px" id="pgto-grid">
+    <label style="font-size:13px;font-weight:800;color:#4f46e5;letter-spacing:.5px">💳 PAGAMENTO <span style="color:#dc2626">*</span></label>
+    <div style="font-size:11px;color:#64748b;margin:4px 0 8px;line-height:1.3">
+      <strong>Pagos agora:</strong> cria venda Bling | <strong>PIX receber:</strong> aguarda confirmação | <strong>Mensalista/Boleto:</strong> em Pagamentos
+    </div>
+    <div style="display:grid;grid-template-columns:repeat(auto-fill,minmax(110px,1fr));gap:6px" id="pgto-grid">
       <button type="button" class="tipo-pgto-btn" data-tipo="dinheiro"     data-key="dinheiro" onclick="selTipoPgto(this)" title="Pago na hora — cria venda no Bling">💵 Dinheiro</button>
       <button type="button" class="tipo-pgto-btn" data-tipo="pix_vista"    data-key="pix" onclick="selTipoPgto(this)" title="Pago na hora — cria venda no Bling">⚡ PIX à vista</button>
       <button type="button" class="tipo-pgto-btn" data-tipo="pix_receber"  data-key="pix_aguardando" onclick="selTipoPgto(this)" title="Cria venda no Bling — aguarda confirmação de PIX">⏳ PIX a receber</button>
@@ -191,8 +198,8 @@
 
   <style>
   .tipo-pgto-btn {
-    padding:14px 8px;border-radius:10px;border:2.5px solid #e2e8f0;background:#f8fafc;
-    font-size:13px;font-weight:700;cursor:pointer;transition:all .15s;color:#374151;
+    padding:10px 6px;border-radius:8px;border:2px solid #e2e8f0;background:#f8fafc;
+    font-size:12px;font-weight:700;cursor:pointer;transition:all .15s;color:#374151;
   }
   .tipo-pgto-btn.sel {
     border-color:#6366f1;background:#ede9fe;color:#4f46e5;
@@ -205,6 +212,9 @@
 
   <div class="status-bar" id="status-bar"></div>
   <button class="btn-primary" id="btn-save" onclick="saveOrder()" title="Salvar pedido e ir para gestão">✅ SALVAR PEDIDO</button>
+
+  </div><!-- /col-right -->
+  </div><!-- /two-col -->
 </div>
 
 <script src="shared.js"></script>
