--- a/pedido.html
+++ b/pedido.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Novo Pedido — MoskoGás v2.11.0</title>
+<title>Novo Pedido — MoskoGás v2.11.1</title>
 <style>
   * { box-sizing: border-box; margin: 0; padding: 0; }
   body { font-family: system-ui, sans-serif; background: #f1f5f9; min-height: 100vh; }
@@ -32,12 +32,12 @@
   .qty-btn { width: 32px; height: 32px; border: 2px solid #e2e8f0; border-radius: 6px; background: #fff; font-size: 18px; cursor: pointer; font-weight: 700; }
   .qty-val { width: 36px; text-align: center; font-weight: 700; font-size: 16px; }
   .btn-remove { background: none; border: none; color: #dc2626; cursor: pointer; font-size: 18px; }
-  .btn-primary { background: #f97316; color: #fff; border: none; border-radius: 10px; padding: 14px 24px; font-size: 17px; font-weight: 800; width: 100%; cursor: pointer; transition: background 0.2s; }
+  .btn-primary { background: #f97316; color: #fff; border: none; border-radius: 10px; padding: 12px 24px; font-size: 16px; font-weight: 800; width: 100%; cursor: pointer; transition: background 0.2s; }
   .btn-primary:hover { background: #ea6d0a; }
   .btn-primary:disabled { background: #94a3b8; cursor: not-allowed; }
   .status-bar { text-align: center; padding: 8px; font-size: 13px; color: #64748b; }
-  .total-bar { background: #1e293b; color: #fff; border-radius: 8px; padding: 12px 16px; display: flex; justify-content: space-between; align-items: center; margin-bottom: 12px; }
-  .total-bar .val { font-size: 22px; font-weight: 900; color: #f97316; }
+  .total-bar { background: #1e293b; color: #fff; border-radius: 8px; padding: 8px 12px; display: flex; justify-content: space-between; align-items: center; margin-bottom: 8px; }
+  .total-bar .val { font-size: 20px; font-weight: 900; color: #f97316; }
   .search-tab { padding: 8px; border: 2px solid #e2e8f0; border-radius: 8px; background: #fff; cursor: pointer; font-size: 13px; font-weight: 700; color: #64748b; transition: all 0.15s; }
   .search-tab.active { border-color: #f97316; background: #f97316; color: #fff; }
   textarea { resize: vertical; height: 50px; }
@@ -49,9 +49,9 @@
 </head>
 <body>
 <div id="nav-placeholder"></div>
-<div style="font-size:10px;color:#94a3b8;text-align:right;padding:2px 12px 0">v2.11.0 — pedido</div>
+<div style="font-size:10px;color:#94a3b8;text-align:right;padding:2px 12px 0">v2.11.1 — pedido</div>
 <div class="container">
-  <h1>➕ Novo Pedido <span id="bling-indicator" title="Verificando Bling..." style="font-size:11px;padding:2px 8px;border-radius:10px;background:#94a3b8;color:#fff;cursor:pointer;vertical-align:middle" onclick="checkBlingStatus(true)">⏳ Bling</span> <span style="font-size:12px;color:#94a3b8;font-weight:400">v2.11.0</span></h1>
+  <h1>➕ Novo Pedido <span id="bling-indicator" title="Verificando Bling..." style="font-size:11px;padding:2px 8px;border-radius:10px;background:#94a3b8;color:#fff;cursor:pointer;vertical-align:middle" onclick="checkBlingStatus(true)">⏳ Bling</span> <span style="font-size:12px;color:#94a3b8;font-weight:400">v2.11.1</span></h1>
 
   <div class="two-col">
   <!-- ═══ COLUNA ESQUERDA: CLIENTE ═══ -->
@@ -156,7 +156,7 @@
 
   <!-- ITENS -->
   <div class="card">
-    <label style="margin-bottom:10px">📦 Itens do Pedido</label>
+    <label style="margin-bottom:6px">📦 Itens do Pedido</label>
     <div id="fav-products" style="display:none;margin-bottom:10px">
       <div style="font-size:11px;font-weight:700;color:#94a3b8;text-transform:uppercase;letter-spacing:0.5px;margin-bottom:6px">⭐ Produtos Rápidos</div>
       <div id="fav-buttons" style="display:flex;flex-wrap:wrap;gap:6px"></div>
@@ -173,16 +173,13 @@
   </div>
 
   <!-- OBSERVAÇÃO + PAGAMENTO -->
-  <div class="card" style="border:3px solid #6366f1">
-    <div style="margin-bottom:10px">
+  <div class="card" style="border:3px solid #6366f1;padding:12px">
+    <div style="margin-bottom:8px">
       <label>📝 Observação (opcional)</label>
-      <textarea id="notes" placeholder="Urgente, horário preferido, troco para..."></textarea>
+      <textarea id="notes" placeholder="Urgente, troco para..." style="height:40px"></textarea>
     </div>
-    <label style="font-size:13px;font-weight:800;color:#4f46e5;letter-spacing:.5px">💳 PAGAMENTO <span style="color:#dc2626">*</span></label>
-    <div style="font-size:11px;color:#64748b;margin:4px 0 8px;line-height:1.3">
-      <strong>Pagos agora:</strong> cria venda Bling | <strong>PIX receber:</strong> aguarda confirmação | <strong>Mensalista/Boleto:</strong> em Pagamentos
-    </div>
-    <div style="display:grid;grid-template-columns:repeat(auto-fill,minmax(110px,1fr));gap:6px" id="pgto-grid">
+    <label style="font-size:12px;font-weight:800;color:#4f46e5;letter-spacing:.5px">💳 PAGAMENTO <span style="color:#dc2626">*</span></label>
+    <div style="display:grid;grid-template-columns:repeat(4,1fr);gap:4px;margin-top:6px" id="pgto-grid">
       <button type="button" class="tipo-pgto-btn" data-tipo="dinheiro"     data-key="dinheiro" onclick="selTipoPgto(this)" title="Pago na hora — cria venda no Bling">💵 Dinheiro</button>
       <button type="button" class="tipo-pgto-btn" data-tipo="pix_vista"    data-key="pix" onclick="selTipoPgto(this)" title="Pago na hora — cria venda no Bling">⚡ PIX à vista</button>
       <button type="button" class="tipo-pgto-btn" data-tipo="pix_receber"  data-key="pix_aguardando" onclick="selTipoPgto(this)" title="Cria venda no Bling — aguarda confirmação de PIX">⏳ PIX a receber</button>
@@ -198,8 +195,8 @@
 
   <style>
   .tipo-pgto-btn {
-    padding:10px 6px;border-radius:8px;border:2px solid #e2e8f0;background:#f8fafc;
-    font-size:12px;font-weight:700;cursor:pointer;transition:all .15s;color:#374151;
+    padding:6px 4px;border-radius:6px;border:2px solid #e2e8f0;background:#f8fafc;
+    font-size:11px;font-weight:700;cursor:pointer;transition:all .15s;color:#374151;line-height:1.2;
   }
   .tipo-pgto-btn.sel {
     border-color:#6366f1;background:#ede9fe;color:#4f46e5;
